# n6py

./: .gitignore  .gitpod.yml  .pre-commit-config.yaml  .prettierignore  .pylintrc  CHANGELOG.md  CITATION.cff  README.md  RELEASE  environment.yml  package-lock.json  package.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/ci-release-commit/: action.yml
.github/actions/release-commit/: action.yml
.github/workflows/: ci-publish.yml  ci-release.yml  ci-test-publish.yml  ci-test.yml  release.yml  test.yml
docs/: index.md
docs/.vitepress/: config.ts  sidebar.ts
docs/.vitepress/composables/: use-version.ts
docs/.vitepress/configs/: head.ts  nav.ts  sidebar.ts
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/css/: base.css  header.css  hero.css  logo.css  scrollbar.css  variables.css
docs/api/: app.md  display.md  encode.md  index.md  stats.md
docs/guide/: about.md  index.md
docs/public/: CNAME
n6py/app/: git_app.py
n6py/display/: __init__.py  html.py
n6py/encode/: split.py  split_most_common.py
n6py/stats/: __init__.py  n_changed.py  num_changed.py  removed.py
notebooks/: demo-colab.ipynb  n6py-demo.ipynb
playground/: main.ipynb  main.py
tests/app/: test_git_app.py
tests/display/: test_box.py  test_display_html.py  test_html.py
tests/encode/: test_split.py  test_split_most_common.py
tests/stats/: test_n_changed.py  test_num_changed.py  test_removed.py
